--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,9 @@ django-cors-headers==4.7.0
 djangorestframework==3.15.2
 python-dotenv==1.0.1
 sqlparse==0.5.3
+celery==5.4.0
+django-celery-beat==2.7.0
+gunicorn==23.0.0
+psycopg2==2.9.10
+redis==5.2.1
+celery[redis]
