--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,7 +53,7 @@ services:
       context: .
       dockerfile: docker/Dockerfile
     container_name: celery_worker
-    command: celery -A celeryRedis worker --loglevel=info
+    command: celery -A backend worker --loglevel=info
     depends_on:
       - redis
       - web
