modification env.example 🧾

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,20 @@
+USE_POSTGRES=True
+POSTGRES_DB=django_db
+POSTGRES_USER=omar
+POSTGRES_PASSWORD=omar123
+POSTGRES_HOST=postgres_db
+POSTGRES_PORT=5432
+
+PGADMIN_DEFAULT_EMAIL=omar@example.com
+PGADMIN_DEFAULT_PASSWORD=admin
+PGADMIN_CONFIG_SERVER_MODE='False'
+
 DJANGO_SECRET_KEY = ""
 DJANGO_DEBUG = ""
 ALLOWED_HOSTS = ""
+
+DEBUG=1
+DJANGO_SETTINGS_MODULE=backend.settings
+DATABASE_URL=postgres://omar:omar123@db:5432/django_db
+CELERY_BROKER_URL=redis://redis:6379/0
+CELERY_RESULT_BACKEND=redis://redis:6379/0
