--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 Django==5.1.6
 django-cors-headers==4.7.0
 djangorestframework==3.15.2
+djangorestframework_simplejwt==5.5.0
+PyJWT==2.9.0
 python-dotenv==1.0.1
 sqlparse==0.5.3
 celery==5.4.0
@@ -9,3 +11,4 @@ gunicorn==23.0.0
 psycopg2==2.9.10
 redis==5.2.1
 celery[redis]
+pillow==9.0.0
